# Simple-RAG

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml
src/: embedding.py  generator.py  loader.py  reranker.py
